--- a/style.css
+++ b/style.css
@@ -1277,6 +1277,24 @@ polyline {
 }
 
 @media (max-width:700px) {
+    #fs {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        z-index: 9999999999999;
+        background-color: #111;
+        background-color: #161616;
+        color: #fff;
+    }
+    #fs #topheading{
+        width: 100%;
+    }
+    #fs #topheading h5 {
+        font-size: 2rem;
+    }
+    #fs h1{
+        font-size: 3rem;
+    }
     #home {
         overflow: hidden;
         width: 100%;
