--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
 #main {
     overflow: hidden;
     width: 100%;
-    /* height: 100%; */
-    /* overflow: hidden; */
+    height: fit-content;
 }
 
 #fs {
@@ -1076,11 +1075,13 @@ polyline {
 }
 
 #part4 .text1 {
+    padding: 1rem;
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
     width: 100%;
-    height: 12vh;
+    height: 38vh;
+    margin-top: -1rem;
     /* background-color:yellow; */
 }
 
@@ -1089,31 +1090,37 @@ polyline {
     align-items: flex-end;
     padding-right: 33vw;
     width: 100%;
-    height: 12vh;
+    height: 15vh;
     /* background-color:grey; */
 }
 
 #part4 .text h1 {
+    text-align: center;
+    align-items: center;
     display: inline-block;
     white-space: nowrap;
-    /* width: 50%; */
-    font-size: 7vw;
+    font-size: 9rem;
     color: #fff;
     font-family: gilroy;
-    /* background-color: rebeccapurple; */
     text-transform: uppercase;
     font-weight: 500;
 
 }
-
+#about-next{
+    margin-top: -17rem;
+}
+#lets-talk{
+    margin-top: -10rem;
+}
 #part4 .button {
+    padding: 1rem;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5vw;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     /* background-color:red; */
 }
 
@@ -1349,7 +1356,12 @@ polyline {
         margin-top: .1rem;
         font-size: 6rem;
     }
-
+    #lets-talk{
+        display: block;
+    }
+    #about-next{
+        display: none;
+    }
     .csection {
         width: 100%;
         height: 160vh;
@@ -1618,6 +1630,7 @@ polyline {
         justify-content: center;
         width: 100%;
         height: 8vh;
+        display: none;
     }
     .arrow1 .o-ui-arrow1{
         left: 0%;
@@ -1629,7 +1642,7 @@ polyline {
         gap: 1rem;
         white-space: nowrap;
         padding: 1rem;
-        margin-top: -23rem;
+        margin-top: -25rem;
     }
     #part4 .button .sp4{
         width: 100%;
